<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pages"
    tools:context="${packageName}.${activityClass}" >
	<LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:gravity="center"
        >
        <LinearLayout 
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/poly_material"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat1"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat2"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat3"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat4"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat5"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/textCheckMark"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/mat_others"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
