<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pages"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            >
            <TextView 
                android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/polymer_industry_label"
    		     android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:gravity="center"
            >
            
            <CheckedTextView 
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:checkMark="?android:attr/textCheckMark"
	            android:clickable="true"
	            android:checked="false"
	            android:paddingLeft="6dip"
	            android:paddingRight="6dip"
        		android:textSize="12sp"
	            android:gravity="center_vertical"
	            android:hint="@string/ind1"/>
            <CheckedTextView 
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:checkMark="?android:attr/textCheckMark"
	            android:clickable="true"
	            android:checked="false"
	            android:paddingLeft="6dip"
	            android:paddingRight="6dip"
        		android:textSize="12sp"
	            android:gravity="center_vertical"
	            android:hint="@string/ind2"/>
            <CheckedTextView 
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:checkMark="?android:attr/textCheckMark"
	            android:clickable="true"
	            android:checked="false"
	            android:paddingLeft="6dip"
	            android:paddingRight="6dip"
        		android:textSize="12sp"
	            android:gravity="center_vertical"
	            android:hint="@string/ind3"/>
            <CheckedTextView 
                android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:checkMark="?android:attr/textCheckMark"
	            android:clickable="true"
	            android:checked="false"
	            android:paddingLeft="6dip"
	            android:paddingRight="6dip"
        		android:textSize="12sp"
	            android:gravity="center_vertical"
	            android:hint="@string/ind4"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
