<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/industry_layout"
    android:background="@drawable/pages_a"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="8.5"
    tools:context="${packageName}.${activityClass}" >
	
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="vertical"
	    android:layout_weight="2.5"
	    
	    >
	    
	</LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/consump_label"
            android:textSize="30sp" />

    </LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
	    >

	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|left"
	    android:hint="@string/numeric"
	    android:textSize="22sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/next_label"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_label" />

    </LinearLayout>
    <LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="vertical"
	    android:layout_weight="2.5"
	    >
	    
	</LinearLayout>
	
</LinearLayout>
